@@ -1,6 +1,6 @@
 [tox]
 envlist = py{27,34}-django{17,18,19,110,111}
-          py{35,36}-django{18,19,110,111}
+          py{35,36}-django{18,19,110,111,200}
 
 install_command = pip install {opts} {packages}
 skip_missing_interpreters = True
@@ -13,3 +13,4 @@ deps =
     django19: Django>=1.9,<1.10
     django110: Django>=1.10,<1.11
     django111: Django>=1.11,<1.12
+    django200: Django>=2.0,<2.1
