@@ -4,6 +4,7 @@ django-sitecats changelog
 
 Unreleased
 ----------
++ Django 2.0 basic compatibility.
 * Dropped support for Python 3.4 and Django<1.7.
 
 
